@@ -1,3 +1,8 @@
+2008-10-12  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/37787
+	* gfortran.dg/module_equivalence_5.f90: New test.
+
 2008-10-12  Steven G. Kargl  <kargls@comcast.net>
 
 	PR fortran/37792
