@@ -1,3 +1,9 @@
+2008-10-12  Paul Thomas  <pault@gcc.gnu.org>
+
+	PR fortran/37787
+	* dependency.c (gfc_are_equivalenced_arrays): Look in symbol
+	namespace rather than current namespace, if it is available.
+
 2008-10-12  Steven G. Kargl  <kargls@comcast.net>
 
 	PR fortran/37792
